java-pure-apko/k8s/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-pure-apko
spec:
  selector:
    app: java-pure-apko
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
